# ResourceManager

./: .gitignore  CMakeLists.txt  LICENSE  ReadMe.md
cmake/: CompilerOptions.cmake
include/ResourceManager/: ResourceBase.hpp  ResourceLoadException.hpp  ResourceManager.hpp
include/ResourceManager/Detail/: IsCreateExist.hpp
src/: CMakeLists.txt
src/ResourceManager/: ResourceBase.cpp  ResourceLoadException.cpp  ResourceManager.cpp
test/: CMakeLists.txt
test/BasicResourceTest/: main.cpp
test/DuplicateResourceTest/: main.cpp
